added ability to run Mirth Client in external process.